--- a/introduction.html
+++ b/introduction.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Le Défi de l'Œil : Les Teintes Secrètes du Louvre</title>
+        <title>The Eye’s Challenge: The Secret Tints of the Louvre</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="manifest" href="manifest.json">
         <!-- Icônes pour Apple (si vous les utilisez, sinon ignorez) -->
@@ -12,22 +12,23 @@
     </head>
     <body data-page="intro">
         <div class="container">
-            <h1>Le Défi de l'Œil : Les Teintes Secrètes du Louvre</h1>
+            <h1>The Eye’s Challenge: The Secret Tints of the Louvre</h1>
             <div class="introduction-text">
-                <p>Mesdames et Messieurs, explorateurs de l'invisible, amateurs d'énigmes et âmes curieuses,</p>
-                <p>Ce soir, les portes du Louvre ne s'ouvrent pas seulement sur l'art et l'histoire, mais sur un secret ancestral, tissé dans le vibrant camaïeu des chefs-d'œuvre qui nous entourent. Oubliez un instant les guides touristiques et les parcours balisés. Car aujourd'hui, vous êtes invités à un voyage initiatique, une quête où l'observation, la perspicacité et l'esprit d'équipe seront vos seuls compas.</p>
-                <p>Depuis des siècles, le Louvre garde jalousement des indices, des messages silencieux dissimulés à la vue de tous, attendant d'être décryptés par des esprits assez audacieux pour voir au-delà des pigments et des marbres. Ces indices, ces clés de la connaissance, résident dans la plus fondamentale des expressions artistiques : la <strong>couleur</strong>.</p>
-                <p>Chaque œuvre, du plus modeste artefact antique au tableau monumental de la Renaissance, détient une part de ce grand mystère chromatique. Vous ne devrez pas seulement admirer, mais <strong>déchiffrer</strong>. Chaque énigme vous guidera vers une œuvre spécifique, dans les recoins les plus fascinants de ce palais des rois et des artistes. Mais ne vous y trompez pas, la célébrité ne garantit pas la vérité ; parfois, les plus grands secrets se cachent dans l'ombre des gloires anonymes.</p>
-                <p>Votre mission sera double :</p>
+                <p>Ladies and Gentlemen, explorers of the invisible, riddle-seekers, and curious souls,</p>
+                <p>Tonight, the doors of the Louvre open not only to art and history, but to an ancestral secret, woven into the vibrant shades of the masterpieces surrounding us. Forget tourist guides and marked paths for a moment. For today, you are invited to a journey of initiation—a quest where observation, insight, and teamwork will be your only compasses.</p>
+                <p>For centuries, the Louvre has fiercely guarded clues—silent messages hidden in plain sight, waiting to be deciphered by minds bold enough to see beyond pigments and marbles. These clues, these keys to knowledge, reside in the most fundamental of artistic expressions: <strong>color</strong>.</p>
+                <p>Each work, from the humblest ancient artifact to the monumental Renaissance painting, holds a part of this great chromatic mystery. You must not only admire, but <strong>decipher</strong>. Each riddle will guide you to a specific work, in the most fascinating corners of this palace of kings and artists. But make no mistake: fame does not guarantee truth; sometimes, the greatest secrets hide in the shadows of anonymous glories.</p>
+                <p>Your mission will be twofold:</p>
                 <ul>
-                    <li><strong>Dénicher la nuance</strong> : Identifier la couleur exacte, le ton, l'éclat qui vous est demandé, comme un code secret révélé par la palette de l'artiste.</li>
-                    <li><strong>Déverrouiller le sésame</strong> : Mettre à jour un "mot de passe" dissimulé, un détail crucial qui ne se révélera qu'aux yeux les plus attentifs, un fragment de vérité qui atteste de votre passage et de votre compréhension.</li>
+                    <li><strong>Uncover the shade</strong>: Identify the exact color, the tone, or the brilliance being asked of you, like a secret code revealed by the artist's palette.</li>
+                    <li><strong>Unlock the "Open Sesame"</strong>: Reveal a hidden "password"—a crucial detail that will only appear to the most attentive eyes, a fragment of truth that proves your passage and your understanding.</li>
                 </ul>
-                <p>Ce n'est pas une simple visite, c'est une plongée au cœur de l'énigme, une traque où chaque ombre, chaque lumière, chaque trait de pinceau peut receler la clé du secret suivant. Le temps presse, les esprits s'aiguisent... et le Louvre attend vos découvertes.</p>
-                <p>Que votre quête commence, et que la lumière des couleurs vous guide !</p>
-            </div>
-            <button id="startButton">Commencer le Jeu</button>
+               <p>This is no ordinary visit; it is a dive into the heart of the enigma, a hunt where every shadow, every light, and every brushstroke may hold the key to the next secret. Time is of the essence, minds are sharpening... and the Louvre awaits your discoveries.</p>
+                <p>Let your quest begin, and may the light of colors guide your way!</p>
+        </div>
+        <button id="startButton">Start the Game</button>
         </div>
         <script src="script.js"></script>
     </body>
+
     </html>
