--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Le Défi de l'Œil - Accueil</title>
+    <title>The Eye’s Challenge - Home</title>
     <link rel="stylesheet" href="styles.css">
   <link rel="manifest" href="manifest.json">
  <link rel="apple-touch-icon" href="icons/icon-192x192.png">
@@ -44,10 +44,11 @@
     <div class="splash-container">
         <!-- Vous pouvez ajouter un logo ici si vous en avez un -->
         <button class="btn-entrer" onclick="window.location.href='introduction.html'">
-            ENTRER DANS LE MYSTÈRE
+            STEP INTO THE MYSTERY
         </button>
     </div>
     <script src="script.js"></script>
 </body>
 
 </html>
+
