--- a/fin_de_jeu.html
+++ b/fin_de_jeu.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Fin du Jeu - Le Défi de l'Œil</title>
+        <title>End of the Game – The Eye's Challenge</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="manifest" href="manifest.json">
         <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
@@ -11,19 +11,20 @@
     </head>
     <body data-page="fin">
         <div class="container">
-            <h1>Félicitations, Explorateur des Teintes !</h1>
-            <p>Vous avez terminé le Défi de l'Œil au Louvre. Voici le récapitulatif de vos découvertes :</p>
+            <h1>Congratulations, Explorer of Shades!</h1>
+            <p>You have completed the Challenge of the Eye at the Louvre. Here is a summary of your discoveries:</p>
 
-            <h2>Votre score final : <span id="finalScore"></span></h2>
+            <h2>Your final score: <span id="finalScore"></span></h2>
 
-            <h3>Détails des énigmes :</h3>
+            <h3>Quest Details:</h3>
             <div id="recapContainer">
                 <!-- Le récapitulatif des énigmes sera inséré ici par JavaScript -->
             </div>
 
-            <p>Nous espérons que cette aventure colorée vous a plu !</p>
-            <button onclick="window.location.href = '/index.html'">Recommencer</button>
+            <p>We hope you had a great time on this colorful quest!</p>
+            <button onclick="window.location.href = '/index.html'">Restart</button>
         </div>
         <script src="script.js"></script>
     </body>
+
     </html>
